@@ -173,9 +173,12 @@ class CScreenHistory extends CScreenBase {
 						$options['excludeSearch'] = 1;
 					}
 				}
-				$options['sortfield'] = ['itemid', 'clock'];
 
 				$historyData = API::History()->get($options);
+				CArrayHelper::sort($historyData, [
+					['field' => 'clock', 'order' => SORT_DESC],
+					['field' => 'ns', 'order' => SORT_DESC]
+				]);
 
 				foreach ($historyData as $data) {
 					$data['value'] = rtrim($data['value'], " \t\r\n");
@@ -268,8 +271,11 @@ class CScreenHistory extends CScreenBase {
 					]);
 				}
 
-				$options['sortfield'] = ['itemid', 'clock'];
 				$historyData = API::History()->get($options);
+				CArrayHelper::sort($historyData, [
+					['field' => 'clock', 'order' => SORT_DESC],
+					['field' => 'ns', 'order' => SORT_DESC]
+				]);
 
 				foreach ($historyData as $data) {
 					$item = $items[$data['itemid']];
